[package]
name = "pulseprint-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rumqttc = "0.24"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-native-tls = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
